--- a/HotelApp.Desktop/MainWindow.xaml
+++ b/HotelApp.Desktop/MainWindow.xaml
@@ -17,11 +17,17 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Search for Guest" FontSize="28" />
+
+        <TextBlock Grid.Row="0" Grid.Column="0" 
+                   Text="Search for Guest"  FontSize="28"/>
 
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
-            <TextBox x:Name="lastNameText" MinWidth="200" Margin="5" />
-            <Button x:Name="searchForGuest" Margin="5" Padding="5" Click="searchForGuest_Click">Search</Button>
+            <TextBox x:Name="lastNameText" MinWidth="200"
+                     Margin="5"/>
+            <Button x:Name="searchForGuest" Margin="5" Padding="5"
+                    Click="searchForGuest_Click">
+                Search
+            </Button>
         </StackPanel>
 
         <ListBox x:Name="resultsList" Grid.Row="2" Grid.Column="0"
@@ -47,7 +53,13 @@
                             <TextBlock Text="{Binding FirstName}" Margin="5" />
                             <TextBlock Text="{Binding LastName}" Margin="5" />
                         </StackPanel>
-                        <Button Margin="5" Padding="10" Grid.Row="0" Grid.RowSpan="4" VerticalAlignment="Center" Grid.Column="1">Check In</Button>
+
+                        <Button Margin="5" Padding="10" Grid.Row="0" Grid.Column="1" 
+                                Grid.RowSpan="4" VerticalAlignment="Center"
+                                Click="CheckInButton_Click">
+                            Check In
+                        </Button>
+
                         <StackPanel Orientation="Horizontal" Grid.Row="1">
                             <TextBlock FontWeight="Bold" Margin="5">Room:</TextBlock>
                             <TextBlock Text="{Binding Title}" Margin="5" />
@@ -57,12 +69,13 @@
                             <TextBlock Text="{Binding RoomNumber}" Margin="5" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Grid.Row="3">
-                            <TextBlock FontWeight="Bold"  Margin="5">Total Cost:</TextBlock>
+                            <TextBlock FontWeight="Bold" Margin="5">Total Cost:</TextBlock>
                             <TextBlock Text="{Binding TotalCost, StringFormat='c'}" Margin="5" />
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
     </Grid>
 </Window>
